--- a/.github/workflows/pipeline-ecr-ebs.yml
+++ b/.github/workflows/pipeline-ecr-ebs.yml
@@ -33,8 +33,8 @@ jobs:
         docker tag $MODULE_FULLNAME:$TAG \
         $REGISTRY_URL/$MODULE_FULLNAME:$TAG
     - run: | 
-        aws ecr get-login-password --region $AWS_REGION | \
-        docker login --username AWS --password-stdin $REGISTRY_URL
+        aws ecr get-login-password --region us-east-1 | 
+        docker login --username AWS --password-stdin 934116844186.dkr.ecr.us-east-1.amazonaws.com
     - run: docker push $REGISTRY_URL/$MODULE_FULLNAME:$TAG
     - uses: actions/upload-artifact@v4
       with:
